# Examforge

./: .editorconfig  .env.example  .lintstagedrc.js  .npmrc  .prettierignore  Makefile  PROJECT-ROADMAP.md  commitlint.config.cjs  package.json  pnpm-lock.yaml
apps/doc-processor/: pyproject.toml
apps/doc-processor/app/: main.py
apps/web/: .prettierignore  eslint.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: error.tsx  layout.tsx  loading.tsx  page.tsx
apps/web/app/admin/audit-logs/: page.tsx
apps/web/app/admin/design-system/: page.tsx
apps/web/app/admin/exams/: page.tsx
apps/web/app/admin/parser-queue/: page.tsx
apps/web/app/admin/question-bank/: page.tsx
apps/web/app/admin/results/: page.tsx
apps/web/app/admin/review-queue/: page.tsx
apps/web/app/admin/settings/: page.tsx
apps/web/app/admin/uploads/: page.tsx
apps/web/app/admin/users/: page.tsx
apps/web/app/login/: page.tsx
apps/web/scripts/: seed-admin-password.ts  verify-auth-flow.ts  verify-authorization-flow.ts
apps/web/src/components/admin/feedback/: EmptyState.tsx  LoadingSkeleton.tsx
apps/web/src/components/admin/layout/: AdminLayout.tsx  Header.tsx  Sidebar.tsx
apps/web/src/components/ui/forms/: Checkbox.tsx
apps/web/src/server/auth/: auth-service.ts
apps/web/src/styles/: admin.css
