[project]
name = "examforge-doc-processor"
version = "0.1.0"
description = "Document processing service for ExamForge — PDF parsing, OCR, and question extraction"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # Web framework
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",

    # Data validation
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.6.0,<3",

    # Structured logging (CLAUDE.md §2.2)
    "structlog>=24.4.0,<25",

    # PDF processing (Phase 6)
    # "pymupdf>=1.24.0,<2",        # PyMuPDF — PDF rasterize + text extract
    # "pytesseract>=0.3.13,<0.4",  # Tesseract OCR wrapper
    # "opencv-python-headless>=4.10.0,<5",  # Image preprocessing
    # "Pillow>=11.0.0,<12",        # Image I/O for Tesseract
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "httpx>=0.28.0,<0.29",        # async test client for FastAPI
    "anyio>=4.7.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (CLAUDE.md §2.2)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "TRY",  # tryceratops
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "FLY",  # flynt
    "TCH",  # flake8-type-checking
    "PT",   # flake8-pytest-style
]
ignore = [
    "TRY003",  # Long messages in exceptions are fine
    "PLR0913", # Too many arguments — FastAPI routes legitimately have many deps
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking (CLAUDE.md §2.2)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
no_implicit_reexport = true
# FastAPI and Pydantic have stubs — skip lib check for third-party
ignore_missing_imports = false

[[tool.mypy.overrides]]
# Third-party packages that don't ship stubs yet
module = [
    "pytesseract.*",
    "cv2.*",
    "fitz.*",       # PyMuPDF
    "structlog.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
